   * Migrate a `src/` layout
   * Add missing GSM 03.38 symbols for decoding
   * Support only Python 3.9 and higher
   * Remove the Python 2.x-only Pyro dependency
   * Migrate CI to use the official Coveralls action
   * Standardize local and CI testing to use tox
   * Build wheels in CI for all supported Python versions
   * Build the docs as a part of the test suite

2.1.1 (September 2024)
======================
   * Fix a regression introduced in 2.1.0

2.1.0 (September 2024)
======================
   * PCSCCardRequest: fix active polling (was a 0.1 sec loop)
   * Fix use of undefined variable 'hresult' in exceptions
   * Fix print() use in pyscard user’s guide
   * Fix deprecation warnings
   * Minor changes

2.0.10 (June 2024)
==================
   * add 'swig' in pyproject.toml build requires
   * CardMonitoringThread(): do not catch unexpected exceptions

2.0.9 (April 2024)
==================
   * fix a bug with CardRequestTimeoutException introduced in 2.0.8
   * Minor changes

2.0.8 (march 2024)
==================
   * Make CardMonitor() thread safe on Python 3.12
   * Add hresult value in exceptions
   * Improve documentation
   * Check swig is installed on build
   * Remove use of imp module for wx (GUI)
   * Makefile: modernize use of setup.py
   * Minor changes

2.0.7 (March 2023)
==================
   * do not include the generated HTML documentation in the archive

2.0.6 (March 2023)
==================
   * handle SCARD_E_NO_SERVICE on Windows (on last reader removal)
   * add support of MSYS2/mingw environment on Windows
   * improve documentation
   * minor changes

2.0.5 (September 2022)
======================
   * New version just because I failed the previous upload to https://pypi.org/

2.0.4 (August 2022)
==================
   * Fix a problem on PCSCCardConnection.disconnect
   * Add support of BaseSCardException(hresult) format
   * Do not use deprecated distutils anymore

2.0.3 (March 2022)
==================